# electron-pan-clip

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  CROSS_COMPILE.md  Cargo.toml  Cross.toml  LICENSE  PLAN_read_clipboard.md  README.md  biome.json  cliff.toml  index.d.ts  index.js  jsdoc.json  justfile  oxc や swc みたいに、napi + rust + ts のプロジェクトを.ini  package.json  pnpm-lock.yaml  shell.nix  specifications.md  tsconfig.json  vitest.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: typos.toml
.github/actions/build-binaries/: action.yml
.github/actions/build-native-module/: action.yml
.github/workflows/: CI.yml  act-pr-build.yml  auto-release.yml  create-release.yml  debug-linux-arm64.yml  lint.yml  pr-build.yml  pr-issue-link.yml  publish-npm.yml  release.yml  test.yml  update-dependencies.yml  version-bump.yml
__test__/: index.spec.mjs
docs/: CONTRIBUTING.md  README.md  RELEASE.md
examples/: basic.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: run-with-xvfb.sh  verify-binaries.js
src/: lib.rs  macos.rs  windows.rs
test/: index.test.ts
tests/integration/: copy_files.test.ts
tests/unit/: copy_files.spec.js  copy_files.spec.ts  index.spec.mjs
(+9 files in other folders)
