[package]
edition = "2021"
name = "electron-pan-clip"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

# Windows 依存
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System_DataExchange", "Win32_Foundation", "Win32_System_Memory", "Win32_UI_Shell"] }

# macOS 依存
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
core-foundation = "0.9.3"

# Linux 依存
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
libc = "0.2.153"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
